	for better erorr reporting/logging.

	* libfreeipmi/include/freeipmi/ipmi-smic-api.h,
	libfreeipmi/src/ipmi-smic-api.c: Removed files.

	* libfreeipmi/: Adjust remaining code for removal of smic api.

	* configure.ac: Update libfreeipmi version.

	* ipmi-sel/src/ipmi-sel-wrapper.c: Use fiid wrappers
	appropriately.

	* bmc-info/src/bmc-info.c: Fix code logic to remove mem-leaks.

	* ipmi-sensors/src/ipmi-sensors-util.h,
	ipmi-sensors/src/ipmi-sensors-util.c: Removed files.  Move code
	into other respective files.

	* ipmiping/src/ipmiping.c (_fiid_obj_get), rmcpping/src/rmcpping.c
	(_fiid_obj_get): Fix error message output.

	* ipmi-chassis/src/ipmi-chassis.c: Add _FIID_OBJ_DESTROY macro.

	* libfreeipmi/include/freeipmi/ipmi-ipmb-interface.h: Renamed to
	ipmi-ipmb-lun-spec.h.

	* libfreeipmi/include/freeipmi/ipmi-kcs-api.h,
	libfreeipmi/include/freeipmi/ipmi-ssif-api.h,
	libfreeipmi/include/ipmi-openipmi-api.h,
	libfreeipmi/src/ipmi-kcs-api.c, libfreeipmi/src/ipmi-ssif-api.c,
	libfreeipmi/src/ipmi-openipmi-api.c,
	libfreeipmi/src/udm/ipmi-kcs-api-udm.c,
	libfreeipmi/src/udm/ipmi-kcs-api-udm.h,
	libfreeipmi/src/udm/ipmi-ssif-api-udm.c,
	libfreeipmi/src/udm/ipmi-ssif-api-udm.h,
	libfreeipmi/src/udm/ipmi-openipmi-api-udm.c,
	libfreeipmi/src/udm/ipmi-openipmi-api-udm.h: Renamed to
	ipmi-kcs-driver.h, ipmi-ssif-driver.h, ipmi-openipmi-driver.h,
	ipmi-kcs-driver.c, ipmi-ssif-driver.c, ipmi-openipmi-driver.c,
	ipmi-kcs-driver-udm.c, ipmi-kcs-driver-udm.h,
	ipmi-ssif-driver-udm.c, ipmi-ssif-driver-udm.h,
	ipmi-openipmi-driver-udm.c, ipmi-openipmi-driver-udm.h
	respectively.

	* libfreeipmi/include/freeipmi/ipmi-lan.h: Move everything into
	ipmi-lan-interface.h.  Remove file.
	
	* libfreeipmi/src/ipmi-lan.c: Move everything into
	ipmi-lan-interface.c.  Remove file.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus.h: Move everything
	into ipmi-rmcpplus-interface.h.  Remove file.
	
	* libfreeipmi/src/ipmi-rmcpplus.c: Move everything into